[gd_scene load_steps=12 format=4 uid="uid://cmm4spig87l8g"]

[ext_resource type="Script" path="res://levels/level_3.gd" id="1_f30ym"]
[ext_resource type="Texture2D" uid="uid://cu72hytvs5ju6" path="res://assets/tilemaps/spritesheet.png" id="1_lqelu"]
[ext_resource type="PackedScene" uid="uid://c0ufdxs3pncqs" path="res://systems/teleporter.tscn" id="2_svmi5"]
[ext_resource type="PackedScene" uid="uid://d3fpb0me7q5pn" path="res://player/player.tscn" id="3_88ki0"]
[ext_resource type="PackedScene" uid="uid://dr0siqgnrieur" path="res://ghosts/ghost.tscn" id="4_7va4f"]
[ext_resource type="AudioStream" uid="uid://gpq3tclyvgau" path="res://assets/sounds/pacman_siren_1.wav" id="5_h1l1d"]
[ext_resource type="AudioStream" uid="uid://58rsc7aoens2" path="res://assets/sounds/pacman_power_pellet.wav" id="6_pvk8x"]
[ext_resource type="AudioStream" uid="uid://b272kh8eepr5t" path="res://assets/sounds/pacman_waka_waka.wav" id="7_pwh3u"]
[ext_resource type="PackedScene" uid="uid://bvcervny45js" path="res://systems/hud.tscn" id="8_5m24w"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_waigt"]
texture = ExtResource("1_lqelu")
margins = Vector2i(1, 1)
separation = Vector2i(1, 1)
texture_region_size = Vector2i(20, 20)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
4:0/0/custom_data_1 = true
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
8:0/0/custom_data_0 = true
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
13:3/0/physics_layer_1/polygon_0/points = PackedVector2Array(-10, -10, 10, -10, 10, 10, -10, 10)
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
6:10/0/terrain_set = 0
6:10/0/terrain = 0
6:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-10, -10, 10, -10, 10, 10, -10, 10)
6:10/0/terrains_peering_bit/right_side = 0
6:10/0/terrains_peering_bit/bottom_side = 0
7:10/0 = 0
7:10/0/terrain_set = 0
7:10/0/terrain = 0
7:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-10, -10, 10, -10, 10, 10, -10, 10)
7:10/0/terrains_peering_bit/right_side = 0
7:10/0/terrains_peering_bit/bottom_side = 0
7:10/0/terrains_peering_bit/left_side = 0
8:10/0 = 0
8:10/0/terrain_set = 0
8:10/0/terrain = 0
8:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-10, -10, 10, -10, 10, 10, -10, 10)
8:10/0/terrains_peering_bit/bottom_side = 0
8:10/0/terrains_peering_bit/left_side = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
6:11/0/terrain_set = 0
6:11/0/terrain = 0
6:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-10, -10, 10, -10, 10, 10, -10, 10)
6:11/0/terrains_peering_bit/right_side = 0
6:11/0/terrains_peering_bit/bottom_side = 0
6:11/0/terrains_peering_bit/top_side = 0
7:11/0 = 0
7:11/0/terrain_set = 0
7:11/0/terrain = 0
7:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-10, -10, 10, -10, 10, 10, -10, 10)
7:11/0/terrains_peering_bit/right_side = 0
7:11/0/terrains_peering_bit/bottom_side = 0
7:11/0/terrains_peering_bit/left_side = 0
7:11/0/terrains_peering_bit/top_side = 0
8:11/0 = 0
8:11/0/terrain_set = 0
8:11/0/terrain = 0
8:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-10, -10, 10, -10, 10, 10, -10, 10)
8:11/0/terrains_peering_bit/bottom_side = 0
8:11/0/terrains_peering_bit/left_side = 0
8:11/0/terrains_peering_bit/top_side = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
6:12/0/terrain_set = 0
6:12/0/terrain = 0
6:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-10, -10, 10, -10, 10, 10, -10, 10)
6:12/0/terrains_peering_bit/right_side = 0
6:12/0/terrains_peering_bit/top_side = 0
7:12/0 = 0
7:12/0/terrain_set = 0
7:12/0/terrain = 0
7:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-10, -10, 10, -10, 10, 10, -10, 10)
7:12/0/terrains_peering_bit/right_side = 0
7:12/0/terrains_peering_bit/left_side = 0
7:12/0/terrains_peering_bit/top_side = 0
8:12/0 = 0
8:12/0/terrain_set = 0
8:12/0/terrain = 0
8:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-10, -10, 10, -10, 10, 10, -10, 10)
8:12/0/terrains_peering_bit/left_side = 0
8:12/0/terrains_peering_bit/top_side = 0
9:12/0 = 0
9:12/0/terrain_set = 0
9:12/0/terrain = 0
9:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-10, -10, 10, -10, 10, 10, -10, 10)
9:12/0/terrains_peering_bit/top_side = 0
10:12/0 = 0
10:12/0/terrain_set = 0
10:12/0/terrain = 0
10:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-10, -10, 10, -10, 10, 10, -10, 10)
10:12/0/terrains_peering_bit/bottom_side = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
6:13/0/terrain_set = 0
6:13/0/terrain = 0
6:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-10, -10, 10, -10, 10, 10, -10, 10)
6:13/0/terrains_peering_bit/bottom_side = 0
6:13/0/terrains_peering_bit/top_side = 0
7:13/0 = 0
7:13/0/terrain_set = 0
7:13/0/terrain = 0
7:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-10, -10, 10, -10, 10, 10, -10, 10)
7:13/0/terrains_peering_bit/right_side = 0
7:13/0/terrains_peering_bit/left_side = 0
8:13/0 = 0
8:13/0/terrain_set = 0
8:13/0/terrain = 0
8:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-10, -10, 10, -10, 10, 10, -10, 10)
9:13/0 = 0
9:13/0/terrain_set = 0
9:13/0/terrain = 0
9:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-10, -10, 10, -10, 10, 10, -10, 10)
9:13/0/terrains_peering_bit/right_side = 0
10:13/0 = 0
10:13/0/terrain_set = 0
10:13/0/terrain = 0
10:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-10, -10, 10, -10, 10, 10, -10, 10)
10:13/0/terrains_peering_bit/left_side = 0
11:13/0 = 0
11:13/0/terrain_set = 0
12:13/0 = 0
12:13/0/terrain_set = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0

[sub_resource type="TileSet" id="TileSet_7caip"]
tile_size = Vector2i(20, 20)
physics_layer_0/collision_layer = 8
physics_layer_0/collision_mask = 0
physics_layer_1/collision_layer = 16
physics_layer_1/collision_mask = 0
terrain_set_0/mode = 2
terrain_set_0/terrain_0/name = "MapTerrain"
terrain_set_0/terrain_0/color = Color(0.5, 0.34375, 0.25, 1)
custom_data_layer_0/name = "small_pellet"
custom_data_layer_0/type = 1
custom_data_layer_1/name = "large_pellet"
custom_data_layer_1/type = 1
sources/0 = SubResource("TileSetAtlasSource_waigt")

[node name="Level3" type="Node2D"]
position = Vector2(-20, 0)
script = ExtResource("1_f30ym")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
position = Vector2(20, 0)
tile_map_data = PackedByteArray("AAAAAAAAAAAGAAoAAAAAAAEAAAAGAA0AAAAAAAIAAAAGAA0AAAABAAAAAAAHAA0AAAACAAAAAAAHAA0AAAADAAAAAAAHAA0AAAAEAAAAAAAHAA0AAAAFAAAAAAAIAAoAAAAHAAAAAAAGAAoAAAAIAAAAAAAHAA0AAAAJAAAAAAAHAA0AAAALAAAAAAAHAA0AAAALAAwAAAAHAA0AAAALABAAAAAHAA0AAAAMAAAAAAAHAA0AAAAMAAwAAAANAAMAAAAMABAAAAAHAA0AAAANAAAAAAAHAAoAAAANAAwAAAANAAMAAAANABAAAAAHAA0AAAAOAAAAAAAHAAoAAAAOAAwAAAANAAMAAAAOABAAAAAHAA0AAAAPAAAAAAAHAA0AAAAPAAwAAAANAAMAAAAPABAAAAAHAA0AAAAQAAAAAAAHAA0AAAAQAAwAAAAHAA0AAAAQABAAAAAHAA0AAAARAAAAAAAHAA0AAAASAAAAAAAHAA0AAAATAAAAAAAHAA0AAAAUAAAAAAAIAAoAAAAWAA0AAAAGAAwAAAAXAAAAAAAHAA0AAAAXAA0AAAAHAA0AAAAYAAAAAAAHAA0AAAAYAA0AAAAHAA0AAAAZAAAAAAAHAA0AAAAZAA0AAAAHAA0AAAAaAAAAAAAHAA0AAAAaAA0AAAAHAA0AAAARAAwAAAAIAAoAAAARAA0AAAAGAA0AAAARAA4AAAAGAA0AAAARAA8AAAAGAA0AAAARABAAAAAIAAwAAAAWAAwAAAAGAA0AAAAbAAAAAAAIAAoAAAAbAAEAAAAGAA0AAAAbAAIAAAAGAA0AAAAbAAMAAAAGAA0AAAAbAA0AAAAHAA0AAAAKAAAAAAAHAA0AAAAFAA8AAAAIAAoAAAAFABAAAAAGAA0AAAAFABEAAAAGAA0AAAAAABMAAAAGAA0AAAAKAAwAAAAGAAoAAAAKAA0AAAAGAA0AAAAKAA4AAAAGAA0AAAAKAA8AAAAGAA0AAAAKABAAAAAGAAwAAAAWAA8AAAAGAAoAAAAXAA8AAAAHAA0AAAAYAA8AAAAHAA0AAAAZAA8AAAAHAA0AAAAaAA8AAAAHAA0AAAAbAA8AAAAHAA0AAAAAABoAAAAGAA0AAAAbAB0AAAAGAA0AAAAbAB4AAAAIAAwAAAAaAB4AAAAHAA0AAAAZAB4AAAAHAA0AAAAYAB4AAAAHAA0AAAAXAB4AAAAHAA0AAAAWAB4AAAAGAAwAAAAUAB4AAAAIAAwAAAATAB4AAAAHAA0AAAASAB4AAAAHAA0AAAARAB4AAAAHAA0AAAAQAB4AAAAHAA0AAAAPAB4AAAAHAA0AAAAMAB4AAAAHAA0AAAALAB4AAAAHAA0AAAAKAB4AAAAHAA0AAAAJAB4AAAAHAA0AAAAIAB4AAAAHAA0AAAAFAB4AAAAIAAwAAAADAB4AAAAHAA0AAAACAB4AAAAHAA0AAAABAB4AAAAHAA0AAAAAAB4AAAAGAAwAAAAAAB0AAAAGAA0AAAAAABwAAAAGAA0AAAAAABsAAAAGAA0AAAAGAAwAAAAIAAAAAAAGAAsAAAAIAAAAAAAGAAoAAAAIAAAAAAAGAAkAAAAIAAAAAAAGAAUAAAAIAAAAAAAFAAEAAAAGAA0AAAAEAAEAAAAEAAAAAAADAAEAAAAIAAAAAAACAAEAAAAIAAAAAAABAAEAAAAIAAAAAAABAAIAAAAIAAAAAAAHAAEAAAAGAA0AAAAIAAEAAAAIAAAAAAAJAAEAAAAIAAAAAAAKAAEAAAAIAAAAAAAMAAEAAAAIAAAAAAAMAAsAAAAIAAAAAAALAAsAAAAIAAAAAAAKAAsAAAAIAAAAAAAJAAwAAAAIAAAAAAAJAA0AAAAIAAAAAAAJAA4AAAAIAAAAAAAGAA4AAAAIAAAAAAAGAA0AAAAIAAAAAAAFAA4AAAAIAAAAAAAEAA4AAAAIAAAAAAADAA4AAAAIAAAAAAACAA4AAAAIAAAAAAABAA4AAAAIAAAAAAAAAA4AAAAIAAAAAAAGAA8AAAAIAAAAAAAGABAAAAAIAAAAAAAGABEAAAAIAAAAAAAGABMAAAAIAAAAAAADABQAAAAIAAoAAAACABQAAAAGAAoAAAABABQAAAAIAAAAAAABABoAAAAIAAAAAAABABsAAAAIAAAAAAABABwAAAAIAAAAAAABAB0AAAAIAAAAAAACAB0AAAAIAAAAAAAJAB0AAAAIAAAAAAAKAB0AAAAIAAAAAAALAB0AAAAIAAAAAAAMABoAAAAIAAAAAAAGABcAAAAHAA0AAAAGABgAAAAIAAAAAAAJABAAAAAIAAAAAAAJAA8AAAAIAAAAAAASABAAAAAIAAAAAAASAA8AAAAIAAAAAAASAA4AAAAIAAAAAAASAA0AAAAIAAAAAAASAAwAAAAIAAAAAAARAAsAAAAIAAAAAAAQAAsAAAAIAAAAAAAPAAsAAAAIAAAAAAAQAAEAAAAIAAAAAAARAAEAAAAIAAAAAAASAAEAAAAIAAAAAAATAAEAAAAIAAAAAAAUAAEAAAAGAA0AAAAVAAcAAAAIAAAAAAAVAAgAAAAIAAAAAAAVAAkAAAAIAAAAAAAVAA0AAAAIAAAAAAAVAA4AAAAIAAAAAAAVAA8AAAAIAAAAAAAVABEAAAAIAAAAAAAVABIAAAAIAAAAAAAVABQAAAAHAA0AAAAPAB0AAAAIAAAAAAAQAB0AAAAIAAAAAAARAB0AAAAIAAAAAAASAB0AAAAIAAAAAAATAB0AAAAIAAAAAAAUAB0AAAAGAA0AAAAWAB0AAAAGAA0AAAAXAB0AAAAEAAAAAAAYAB0AAAAIAAAAAAAZAB0AAAAIAAAAAAAaAB0AAAAIAAAAAAAaABwAAAAIAAAAAAAaABsAAAAIAAAAAAAaABoAAAAIAAAAAAAVABcAAAAHAA0AAAAWAA4AAAAIAAAAAAAXAA4AAAAIAAAAAAAYAA4AAAAIAAAAAAAZAA4AAAAIAAAAAAAaAA4AAAAIAAAAAAAbAA4AAAAIAAAAAAAXAAgAAAAHAAwAAAAYAAgAAAAHAAwAAAAaAAgAAAAIAAAAAAAaAAEAAAAIAAAAAAAZAAEAAAAIAAAAAAAYAAEAAAAIAAAAAAAXAAEAAAAEAAAAAAAWAAEAAAAGAA0AAAAOAAsAAAAIAAAAAAANAAsAAAAIAAAAAAAcAA0AAAAHAA0AAAAdAA0AAAAHAA0AAAAdAA8AAAAHAA0AAAAcAA8AAAAHAA0AAAAeAA0AAAAIAAoAAAAeAA4AAAAGAA0AAAAeAA8AAAAIAAwAAAAAAAQAAAAGAA0AAAAAAAMAAAAGAA0AAAAbAAQAAAAGAA0AAAAPABYAAAAIAAoAAAASABQAAAAIAAwAAAAVABMAAAAIAAAAAAAWABAAAAAGAA0AAAAVABAAAAAIAAAAAAAaABQAAAAIAAAAAAAbAAUAAAAGAA0AAAAbABcAAAAGAA0AAAAbABgAAAAGAA0AAAAbABkAAAAGAA0AAAAbABoAAAAGAA0AAAAbABsAAAAGAA0AAAAbABwAAAAGAA0AAAAAABcAAAAGAA0AAAAAABgAAAAGAA0AAAAAABkAAAAGAA0AAAAWABgAAAAIAAAAAAAMABkAAAAGAAwAAAAIABsAAAAIAAAAAAABABkAAAAIAAAAAAABABgAAAAIAAAAAAACABgAAAAGAAoAAAAGABkAAAAIAAAAAAAAABQAAAAGAA0AAAAEABQAAAAIAAAAAAAFABQAAAAGAAoAAAAHABUAAAAGAA0AAAAIABUAAAAIAAAAAAAPABUAAAAIAAAAAAAQABUAAAAIAAAAAAATABUAAAAIAAAAAAAUABUAAAAGAA0AAAAYABQAAAAGAAoAAAAbABQAAAAGAA0AAAAMABYAAAAGAAoAAAAGABQAAAAHAA0AAAALABEAAAAIAAAAAAASABMAAAAIAAsAAAAPABMAAAAGAA0AAAAHAAwAAAAGAAoAAAAGAAgAAAAIAAAAAAAHAAkAAAAGAA0AAAAGAAQAAAAIAAAAAAAFAAQAAAAGAA0AAAABAAQAAAAIAAAAAAABAAMAAAAIAAAAAAAJAAIAAAAGAAoAAAAJAAMAAAAGAAsAAAAJAAQAAAAGAAsAAAALAAEAAAAIAAAAAAAMAAIAAAAIAAAAAAAMAAMAAAAIAAAAAAAPAAMAAAAIAAAAAAAPAAIAAAAIAAAAAAAPAAEAAAAIAAAAAAASAAMAAAAIAAsAAAAVAAQAAAAIAAAAAAAWAAQAAAAGAA0AAAAaAAMAAAAIAAAAAAAaAAIAAAAIAAAAAAATAAYAAAAIAAAAAAAZAAgAAAAIAAwAAAAbAAgAAAAGAA0AAAAUAAkAAAAGAA0AAAAPAAQAAAAIAAAAAAASAAsAAAAIAAAAAAAMABEAAAAIAAAAAAAPABEAAAAIAAAAAAAAAAUAAAAGAA0AAAD9/w8AAAAGAAwAAAAAAA8AAAAHAA0AAAABAA8AAAAHAA0AAAACAA8AAAAHAA0AAAADAA8AAAAHAA0AAAAEAA8AAAAHAA0AAAAFAAsAAAAGAA0AAAAFAAwAAAAGAA0AAAAFAA0AAAAIAAwAAAAEAA0AAAAHAA0AAAADAA0AAAAHAA0AAAACAA0AAAAHAA0AAAABAA0AAAAHAA0AAAAAAA0AAAAHAA0AAAD//w0AAAAHAA0AAAD+/w0AAAAHAA0AAAD9/w0AAAAGAAoAAAD9/w4AAAAGAA0AAAD+/w8AAAAHAA0AAAD//w8AAAAHAA0AAAAAABYAAAAGAA0AAAAAABUAAAAGAA0AAAAAABIAAAAGAAoAAAAWABEAAAAGAA0AAAAbABIAAAAIAAoAAAAbABMAAAAGAA0AAAAbABUAAAAGAA0AAAAbABYAAAAGAA0AAAAAAAkAAAAGAA0AAAAAAAgAAAAGAA0AAAAAAAcAAAAGAA0AAAAAAAYAAAAGAA0AAAAbAAoAAAAIAAwAAAAbAAkAAAAGAA0AAAAbAAcAAAAGAA0AAAAbAAYAAAAGAA0AAAAFAAoAAAAIAAoAAAAEAAoAAAAHAA0AAAADAAoAAAAHAA0AAAACAAoAAAAHAA0AAAABAAoAAAAHAA0AAAAAAAoAAAAGAAwAAAAWAAsAAAAGAA0AAAAWAAoAAAAGAAoAAAAXAAoAAAAHAA0AAAAYAAoAAAAHAA0AAAAZAAoAAAAHAA0AAAAaAAoAAAAHAA0AAAAWABIAAAAGAAwAAAAXABIAAAAHAA0AAAAYABIAAAAHAA0AAAAZABIAAAAHAA0AAAAaABIAAAAHAA0AAAAFABIAAAAIAAwAAAAEABIAAAAHAA0AAAADABIAAAAHAA0AAAACABIAAAAHAA0AAAABABIAAAAHAA0AAAANAB4AAAAHAAwAAAAOAB4AAAAHAAwAAAANAB0AAAAGAAsAAAANABwAAAAGAAsAAAAOABwAAAAIAAsAAAAOAB0AAAAIAAsAAAAEAB4AAAAHAA0AAAACABwAAAAGAAwAAAAFAB0AAAAGAA0AAAAFABwAAAAGAA0AAAAFABsAAAAGAA0AAAAHAB4AAAAGAAwAAAAHAB0AAAAGAA0AAAAHABwAAAAGAA0AAAAHABsAAAAGAA0AAAAHABoAAAAGAA0AAAAFABoAAAAGAA0AAAACABkAAAAGAAsAAAACABoAAAAGAAsAAAACABsAAAAGAAsAAAAFABkAAAAKAAwAAAAHABkAAAAKAAwAAAADABkAAAAIAAsAAAADABoAAAAIAAsAAAADABsAAAAIAAsAAAADABwAAAAIAAwAAAADABgAAAAIAAoAAAAFAAUAAAAJAAwAAAAFAAMAAAAGAA0AAAAFAAIAAAAGAA0AAAAHAAIAAAAGAA0AAAAHAAMAAAAGAA0AAAAHAAQAAAAGAA0AAAAHAAUAAAAJAAwAAAAWABwAAAAGAA0AAAAWABsAAAAGAA0AAAAWABoAAAAGAA0AAAAWABkAAAAKAAwAAAAUABwAAAAGAA0AAAAUABsAAAAGAA0AAAAUABoAAAAGAA0AAAAUABkAAAAKAAwAAAAYABkAAAAGAAsAAAAYABoAAAAGAAsAAAAYABsAAAAGAAsAAAAYABwAAAAGAAwAAAAZABwAAAAIAAwAAAAZABsAAAAIAAsAAAAZABoAAAAIAAsAAAAZABkAAAAIAAsAAAAYABgAAAAGAAoAAAAZABgAAAAIAAoAAAAWAAUAAAAJAAwAAAAWAAMAAAAGAA0AAAAWAAIAAAAGAA0AAAAUAAIAAAAGAA0AAAAUAAMAAAAGAA0AAAAUAAQAAAAGAA0AAAAUAAUAAAAJAAwAAAAWAAAAAAAGAAoAAAAFABcAAAAGAAwAAAAHABcAAAAIAAwAAAAHABYAAAAGAA0AAAAFABUAAAAGAA0AAAAFABYAAAAGAA0AAAAHABQAAAAIAAoAAAAUABcAAAAGAAwAAAAWABcAAAAIAAwAAAAWABYAAAAGAA0AAAAWABUAAAAGAA0AAAAWABQAAAAIAAoAAAAUABQAAAAGAAoAAAAUABYAAAAGAA0AAAAYABYAAAAGAAwAAAAZABYAAAAIAAwAAAAZABUAAAAIAAsAAAAYABUAAAAGAAsAAAADABYAAAAIAAwAAAACABYAAAAGAAwAAAACABUAAAAGAAsAAAADABUAAAAIAAsAAAAZABQAAAAIAAoAAAANABsAAAAGAAoAAAAOABsAAAAIAAoAAAAJABwAAAAGAAwAAAAKABwAAAAHAAwAAAALABwAAAAIAAwAAAAQABwAAAAGAAwAAAARABwAAAAHAAwAAAASABwAAAAIAAwAAAARABsAAAAHAAsAAAAQABsAAAAGAAoAAAASABsAAAAIAAsAAAAKABsAAAAHAAsAAAAJABsAAAAGAAsAAAAJABoAAAAGAAsAAAAJABkAAAAGAAsAAAAKABoAAAAIAAsAAAAKABkAAAAIAAsAAAALABsAAAAIAAoAAAAJABgAAAAGAAsAAAAKABgAAAAIAAsAAAAKABcAAAAIAAsAAAAKABYAAAAIAAoAAAAJABYAAAAGAAoAAAAJABcAAAAGAAsAAAARABoAAAAGAAsAAAASABoAAAAIAAsAAAASABkAAAAIAAsAAAASABgAAAAIAAsAAAASABcAAAAIAAsAAAASABYAAAAIAAoAAAARABYAAAAGAAoAAAARABcAAAAGAAsAAAARABgAAAAGAAsAAAARABkAAAAGAAsAAAANABkAAAAHAA0AAAAOABkAAAAHAA0AAAAPABkAAAAIAAwAAAAPABgAAAAGAA0AAAAPABcAAAAGAA0AAAAOABYAAAAHAA0AAAAMABcAAAAGAA0AAAAMABgAAAAGAA0AAAANABYAAAAHAA0AAAAMABQAAAAGAAwAAAAMABMAAAAGAA0AAAAMABIAAAAGAAoAAAANABIAAAAHAA0AAAAOABIAAAAHAA0AAAAPABIAAAAIAAoAAAANABQAAAAHAA0AAAARABQAAAAGAAwAAAASABIAAAAIAAoAAAARABIAAAAGAAoAAAARABMAAAAGAAsAAAAKABQAAAAIAAwAAAAJABQAAAAGAAwAAAAJABMAAAAGAAsAAAAJABIAAAAGAAoAAAAKABIAAAAIAAoAAAAKABMAAAAIAAsAAAAHABIAAAAJAAwAAAAHABEAAAAGAA0AAAAHABAAAAAGAAsAAAAHAA8AAAAGAAsAAAAUABIAAAAJAAwAAAAUABEAAAAGAA0AAAAUABAAAAAIAAsAAAAUAA8AAAAIAAsAAAATAA8AAAAGAAsAAAATABAAAAAGAAwAAAAIABAAAAAIAAwAAAAIAA8AAAAIAAsAAAAIAA4AAAAIAAsAAAAHAA4AAAAGAAsAAAAHAA0AAAAGAAsAAAAIAA0AAAAIAAsAAAAIAAwAAAAIAAoAAAAUAA4AAAAIAAsAAAATAA4AAAAGAAsAAAATAA0AAAAGAAsAAAATAAwAAAAGAAoAAAAUAAwAAAAIAAoAAAAUAA0AAAAIAAsAAAAHAAoAAAAGAAwAAAAIAAoAAAAHAA0AAAAJAAoAAAAHAA0AAAAKAAoAAAAHAA0AAAAHAAgAAAAGAA0AAAARAAoAAAAHAA0AAAASAAoAAAAHAA0AAAATAAoAAAAHAA0AAAAUAAoAAAAIAAwAAAAUAAgAAAAGAA0AAAANAAoAAAAGAAwAAAAOAAoAAAAIAAwAAAAKAAUAAAAHAAwAAAAJAAUAAAAGAAwAAAAKAAIAAAAHAAoAAAAKAAMAAAAHAAsAAAAKAAQAAAAHAAsAAAASAAUAAAAIAAwAAAASAAQAAAAIAAsAAAASAAIAAAAIAAoAAAARAAIAAAAHAAoAAAARAAMAAAAHAAsAAAARAAQAAAAHAAsAAAARAAUAAAAHAAwAAAACAAIAAAAGAAoAAAADAAIAAAAIAAoAAAADAAMAAAAIAAsAAAADAAQAAAAIAAsAAAADAAUAAAAIAAwAAAACAAQAAAAGAAsAAAACAAMAAAAGAAsAAAACAAUAAAAGAAwAAAADAAgAAAAHAAwAAAACAAgAAAAGAAwAAAAYAAIAAAAGAAoAAAAZAAIAAAAIAAoAAAAZAAMAAAAIAAsAAAAZAAQAAAAIAAsAAAAYAAQAAAAGAAsAAAAYAAMAAAAGAAsAAAAYAAUAAAAGAAwAAAAZAAUAAAAIAAwAAAAYAAcAAAAHAAoAAAAZAAcAAAAIAAoAAAAEAAgAAAAHAAwAAAAFAAgAAAAIAAwAAAACAAcAAAAGAAoAAAADAAcAAAAHAAoAAAAEAAcAAAAHAAoAAAAFAAcAAAAIAAoAAAAWAAgAAAAGAAwAAAAWAAcAAAAGAAoAAAAXAAcAAAAHAAoAAAALAAMAAAAIAAsAAAALAAIAAAAIAAoAAAAQAAIAAAAGAAoAAAAQAAMAAAAGAAsAAAAOAAIAAAAIAAsAAAANAAIAAAAGAAsAAAANAAMAAAAGAAwAAAAOAAMAAAAIAAwAAAANAAEAAAAGAAsAAAAOAAEAAAAIAAsAAAANAAUAAAAGAAoAAAAOAAUAAAAIAAoAAAAHAAcAAAAGAAoAAAANAAkAAAAGAAsAAAANAAgAAAAGAAsAAAANAAcAAAAGAAsAAAANAAYAAAAGAAsAAAAOAAYAAAAIAAsAAAAOAAcAAAAIAAsAAAAOAAgAAAAIAAsAAAAOAAkAAAAIAAsAAAALAAoAAAAIAAwAAAALAAkAAAAGAA0AAAALAAgAAAAGAA0AAAAQAAoAAAAGAAwAAAAQAAkAAAAGAA0AAAAQAAgAAAAGAA0AAAAIAAcAAAAHAA0AAAAJAAcAAAAHAA0AAAAKAAcAAAAHAA0AAAALAAcAAAAIAAoAAAAUAAcAAAAIAAoAAAATAAcAAAAHAA0AAAASAAcAAAAHAA0AAAARAAcAAAAHAA0AAAAQAAcAAAAGAAoAAAALAAQAAAAIAAsAAAALAAUAAAAIAAwAAAAQAAQAAAAGAAsAAAAQAAUAAAAGAAwAAAAOABQAAAAHAA0AAAAPABQAAAAIAAwAAAALABoAAAAIAAAAAAANABoAAAAIAAAAAAAOABoAAAAIAAAAAAAPABoAAAAIAAAAAAAQABoAAAAIAAAAAAAPABsAAAAIAAAAAAAPABwAAAAIAAAAAAAIAB0AAAAIAAAAAAAIABwAAAAIAAAAAAAIABoAAAAIAAAAAAAIABkAAAAIAAAAAAAIABgAAAAIAAAAAAAIABcAAAAIAAAAAAAIABYAAAAIAAAAAAAIABQAAAAIAAAAAAAIABMAAAAIAAAAAAAIABIAAAAIAAAAAAAIABEAAAAIAAAAAAAJABUAAAAIAAAAAAAKABUAAAAIAAAAAAALABUAAAAIAAAAAAAMABUAAAAIAAAAAAANABUAAAAIAAAAAAAOABUAAAAIAAAAAAARABUAAAAIAAAAAAASABUAAAAIAAAAAAATABEAAAAIAAAAAAATABIAAAAIAAAAAAATABMAAAAIAAAAAAATABQAAAAIAAAAAAATABYAAAAIAAAAAAATABcAAAAIAAAAAAATABgAAAAIAAAAAAATABkAAAAIAAAAAAATABoAAAAIAAAAAAATABsAAAAIAAAAAAATABwAAAAIAAAAAAAQABkAAAAIAAAAAAAQABgAAAAIAAAAAAAQABcAAAAIAAAAAAAQABYAAAAIAAAAAAAQABQAAAAIAAAAAAAQABMAAAAIAAAAAAAQABIAAAAIAAAAAAAQABEAAAAIAAAAAAARABEAAAAIAAAAAAASABEAAAAIAAAAAAAKABEAAAAIAAAAAAAJABEAAAAIAAAAAAALABIAAAAIAAAAAAALABMAAAAIAAAAAAALABQAAAAIAAAAAAALABYAAAAIAAAAAAALABcAAAAIAAAAAAALABgAAAAIAAAAAAALABkAAAAIAAAAAAAMABsAAAAIAAAAAAAMABwAAAAIAAAAAAAMAB0AAAAIAAAAAAAGABwAAAAIAAAAAAAGABsAAAAIAAAAAAAGABoAAAAIAAAAAAADAB0AAAAIAAAAAAAEAB0AAAAEAAAAAAAEABwAAAAIAAAAAAAEABsAAAAIAAAAAAAEABoAAAAIAAAAAAAEABkAAAAIAAAAAAAEABgAAAAIAAAAAAAEABcAAAAIAAAAAAABABcAAAAIAAAAAAACABcAAAAIAAAAAAADABcAAAAIAAAAAAAFABgAAAAIAAAAAAAHABgAAAAIAAAAAAAEABYAAAAIAAAAAAAEABUAAAAIAAAAAAAEABMAAAAIAAAAAAADABMAAAAIAAAAAAACABMAAAAIAAAAAAABABMAAAAIAAAAAAABABUAAAAIAAAAAAABABYAAAAIAAAAAAAFABMAAAAIAAAAAAAHABMAAAAIAAAAAAAGABIAAAAIAAAAAAAUABgAAAAIAAAAAAAVABgAAAAIAAAAAAAXABgAAAAIAAAAAAAXABkAAAAIAAAAAAAXABoAAAAIAAAAAAAXABsAAAAIAAAAAAAXABwAAAAIAAAAAAAaABYAAAAIAAAAAAAaABUAAAAIAAAAAAAaABMAAAAIAAAAAAAZABMAAAAIAAAAAAAYABMAAAAIAAAAAAAXABMAAAAIAAAAAAAWABMAAAAIAAAAAAAUABMAAAAIAAAAAAAXABQAAAAIAAAAAAAXABUAAAAIAAAAAAAXABYAAAAIAAAAAAAXABcAAAAIAAAAAAAYABcAAAAIAAAAAAAZABcAAAAIAAAAAAAVAAwAAAAIAAAAAAAVAAsAAAAIAAAAAAAVAAoAAAAIAAAAAAAUAAsAAAAIAAAAAAATAAsAAAAIAAAAAAAJAAsAAAAIAAAAAAAIAAsAAAAIAAAAAAAHAAsAAAAIAAAAAAAGAAcAAAAIAAAAAAAGAAYAAAAIAAAAAAAGAAMAAAAIAAAAAAAFAAYAAAAIAAAAAAAEAAYAAAAIAAAAAAADAAYAAAAIAAAAAAACAAYAAAAIAAAAAAABAAYAAAAIAAAAAAABAAUAAAAIAAAAAAAEAAIAAAAIAAAAAAAEAAMAAAAIAAAAAAAEAAQAAAAIAAAAAAAEAAUAAAAIAAAAAAABAAcAAAAIAAAAAAABAAgAAAAIAAAAAAABAAkAAAAIAAAAAAACAAkAAAAIAAAAAAADAAkAAAAIAAAAAAAEAAkAAAAIAAAAAAAFAAkAAAAIAAAAAAAMAAoAAAAIAAAAAAAMAAkAAAAIAAAAAAAMAAgAAAAIAAAAAAAMAAcAAAAIAAAAAAAMAAYAAAAIAAAAAAAMAAUAAAAIAAAAAAAMAAQAAAAIAAAAAAALAAYAAAAIAAAAAAAKAAYAAAAIAAAAAAAJAAYAAAAIAAAAAAAIAAYAAAAIAAAAAAAIAAUAAAAIAAAAAAAIAAQAAAAIAAAAAAAIAAMAAAAIAAAAAAAIAAIAAAAIAAAAAAAHAAYAAAAIAAAAAAANAAQAAAAIAAAAAAAOAAQAAAAIAAAAAAAPAAUAAAAIAAAAAAAPAAYAAAAIAAAAAAAPAAcAAAAIAAAAAAAPAAgAAAAIAAAAAAAPAAkAAAAIAAAAAAAPAAoAAAAIAAAAAAAQAAYAAAAIAAAAAAARAAYAAAAIAAAAAAASAAYAAAAIAAAAAAATAAUAAAAIAAAAAAATAAQAAAAIAAAAAAATAAMAAAAIAAAAAAATAAIAAAAIAAAAAAAUAAYAAAAIAAAAAAAVAAYAAAAIAAAAAAAWAAYAAAAIAAAAAAAVAAIAAAAIAAAAAAAVAAMAAAAIAAAAAAAVAAUAAAAIAAAAAAAXAAYAAAAIAAAAAAAYAAYAAAAIAAAAAAAZAAYAAAAIAAAAAAAaAAYAAAAIAAAAAAAaAAUAAAAIAAAAAAAaAAQAAAAIAAAAAAAXAAIAAAAIAAAAAAAXAAMAAAAIAAAAAAAXAAQAAAAIAAAAAAAXAAUAAAAIAAAAAAAaAAcAAAAIAAAAAAAaAAkAAAAIAAAAAAAZAAkAAAAIAAAAAAAYAAkAAAAIAAAAAAAXAAkAAAAIAAAAAAAWAAkAAAAIAAAAAAAVABkAAAAIAAAAAAAVABoAAAAIAAAAAAAVABsAAAAIAAAAAAAVABwAAAAIAAAAAAAaABcAAAAIAAAAAAAaABgAAAAIAAAAAAAaABkAAAAIAAAAAAA=")
tile_set = SubResource("TileSet_7caip")

[node name="Teleporter" parent="." node_paths=PackedStringArray("destination") instance=ExtResource("2_svmi5")]
position = Vector2(-10, 291)
destination = NodePath("Marker2D")

[node name="Marker2D" type="Marker2D" parent="Teleporter"]
position = Vector2(600, -1)

[node name="Teleporter2" parent="." node_paths=PackedStringArray("destination") instance=ExtResource("2_svmi5")]
position = Vector2(610, 291)
destination = NodePath("Marker2D")

[node name="Marker2D" type="Marker2D" parent="Teleporter2"]
position = Vector2(-600, -1)

[node name="Teleporter3" parent="." node_paths=PackedStringArray("destination") instance=ExtResource("2_svmi5")]
position = Vector2(150, 20)
destination = NodePath("Marker2D")

[node name="Marker2D" type="Marker2D" parent="Teleporter3"]
position = Vector2(0, 568)

[node name="Teleporter5" parent="." node_paths=PackedStringArray("destination") instance=ExtResource("2_svmi5")]
position = Vector2(450, 20)
destination = NodePath("Marker2D")

[node name="Marker2D" type="Marker2D" parent="Teleporter5"]
position = Vector2(0, 568)

[node name="Teleporter4" parent="." node_paths=PackedStringArray("destination") instance=ExtResource("2_svmi5")]
position = Vector2(150, 610)
destination = NodePath("Marker2D")

[node name="Marker2D" type="Marker2D" parent="Teleporter4"]
position = Vector2(0, -562)

[node name="Teleporter6" parent="." node_paths=PackedStringArray("destination") instance=ExtResource("2_svmi5")]
position = Vector2(450, 610)
destination = NodePath("Marker2D")

[node name="Marker2D" type="Marker2D" parent="Teleporter6"]
position = Vector2(0, -562)

[node name="Player" parent="." instance=ExtResource("3_88ki0")]
position = Vector2(300, 350)

[node name="Ghost" parent="." instance=ExtResource("4_7va4f")]
position = Vector2(270, 270)
release_time = 4

[node name="Ghost2" parent="." instance=ExtResource("4_7va4f")]
position = Vector2(290, 280)
type = 1
release_time = 8

[node name="Ghost3" parent="." instance=ExtResource("4_7va4f")]
position = Vector2(310, 290)
type = 2
release_time = 12

[node name="Ghost4" parent="." instance=ExtResource("4_7va4f")]
position = Vector2(330, 300)
type = 3
release_time = 16

[node name="SirenSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_h1l1d")
autoplay = true

[node name="RunningSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_pvk8x")

[node name="EatSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_pwh3u")

[node name="HUD" parent="." instance=ExtResource("8_5m24w")]
